--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <title>React Calculator</title>
 
-<link href="/build//style/main.css" rel="stylesheet"></head>
+<link href="style/main.css" rel="stylesheet"></head>
 
 <body>
   <div id="app"></div>
-<script type="text/javascript" src="/build/main.js"></script></body>
+<script type="text/javascript" src="main.js"></script></body>
 
 </html>
